@@ -1,3 +1,3 @@
-FROM docker2.molflow.com/devops/qsmr_base:170116
+FROM docker2.molflow.com/devops/qsmr_base:170503
 
 COPY data /QsmrData
